# language-model-discord-bot

./: Cargo.toml  README.md
src/: api.rs  main.rs
