[package]
name = "wizard_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
serde_json = "1.0.96"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
